@@ -7,6 +7,10 @@ CVS HEAD
 1999-12-18 warp:
  Feature:
   * Added new builtin 'builtin'
+ Internal:
+  * Changed prompt evaluation to be more bash compatible and
+    to handle even complex prompts
+  * Fixed generation of weekday names
 
 1999-12-17 gwhitney:
  Internal:
